# Compiler

./: .gitignore  CMakeLists.txt  Compiler.vcxproj  Makefile  README.md
include/: CodeGenIR.h  Common.h  ExecIO.h  IRGen.h  Program.h  assembler.h  linker.h  optimizer.h  vm.h
presentation/: Kodi_Bacatrutyun.html  Kursayin_Ashxatank.html  STUDY_GUIDE.md  index.html
presentations/: cpp_memory_model.html
src/: CodeGenIR.cpp  ExecIO.cpp  IRGen.cpp  assembler.cpp  linker.cpp  main.cpp  opcodes.cpp  optimizer.cpp  vm.cpp
